clear button handel in cart

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,14 +1,143 @@
 {
+    "dir":"rtl",
+
     "users":{
 
     },
     "cart":{
-
-    },
+        "card-title":"سلة المشريات",
+        "card-price":"السعر الكلى :",
+        "clear":"مسح السلة ",
+        "remove-btn":"مسح"
+       },
     "general":{
 
     },
     "Contact":{
         "Contact":"تواصل معنا "
-    }
+    },
+        "product": [
+          {
+            "_id": "65da0fd4bc3d4fd87bfbe638",
+            "title": "ابل 2023 ماك بوك برو",
+            "description": "كان الآيفون أول هاتف محمول يستخدم تكنولوجيا اللمس المتعدد.",
+            "category_id": "65d9348eae387c63a42ffc9a"
+          },
+          {
+            "_id": "65f0de96f6d9ac431f3bc4ce",
+            "title": "ابل 2023 ماك بوك برو",
+            "description": "كان الآيفون أول هاتف محمول يستخدم تكنولوجيا اللمس المتعدد.",
+            "category_id": "65d9340bae387c63a42ffc96"
+          },
+          {
+            "_id": "65f0deb3f6d9ac431f3bc4cf",
+            "title": "لابتوب اتش بي",
+            "description": "كان الكمبيوتر المحمول هو أول هاتف محمول يستخدم تكنولوجيا اللمس المتعدد.",
+            "category_id": "65d9340bae387c63a42ffc96"
+          },
+          {
+            "_id": "66034246f5057c627fb39246",
+            "title": "ديل XPS 13",
+            "description": "ديل XPS 13 هو كمبيوتر محمول فاخر بتصميم أنيق وأداء قوي.",
+            "category_id": "65d9348eae387c63a42ffc9a"
+          },
+          {
+            "_id": "66034299f5057c627fb39247",
+            "title": "إتش بي Pavilion",
+            "description": "إتش بي Pavilion هو كمبيوتر محمول متعدد الاستخدامات مناسب للاستخدام اليومي.",
+            "category_id": "65d9348eae387c63a42ffc9a"
+          },
+          {
+            "_id": "66047f1cffac53557cf1821b",
+            "title": "لابتوب 1",
+            "description": "كمبيوتر محمول عالي الأداء بميزات متقدمة.",
+            "category_id": "65d9348eae387c63a42ffc9a"
+          },
+          {
+            "_id": "66047f1cffac53557cf18222",
+            "title": "تابلت 2",
+            "description": "تابلت عالي الأداء بعرض مذهل.",
+            "category_id": "6603efb64075054035e85718"
+          },
+          {
+            "_id": "66047f1cffac53557cf18223",
+            "title": "ساعة ذكية 1",
+            "description": "ساعة ذكية أنيقة مع ميزات تتبع اللياقة البدنية.",
+            "category_id": "6603e621835b7db92d6e1d39"
+          },
+          {
+            "_id": "66047f1cffac53557cf18224",
+            "title": "ساعة ذكية 2",
+            "description": "ساعة ذكية فاخرة بواجهة قابلة للتخصيص.",
+            "category_id": "6603e621835b7db92d6e1d39"
+          },
+          {
+            "_id": "66047f1cffac53557cf18225",
+            "title": "لابتوب 3",
+            "description": "كمبيوتر محمول بأداء معقول بسعر مناسب.",
+            "category_id": "65d9348eae387c63a42ffc9a"
+          },
+          {
+            "_id": "66047f1cffac53557cf18221",
+            "title": "تابلت 1",
+            "description": "تابلت متعدد الاستخدامات للعمل والترفيه.",
+            "category_id": "6603efb64075054035e85718"
+          },
+          {
+            "_id": "66047f1cffac53557cf1822b",
+            "title": "تابلت 3",
+            "description": "تابلت خفيف الوزن مثالي للاستخدام العارض.",
+            "category_id": "6603efb64075054035e85718"
+          },
+          {
+            "_id": "66047f1cffac53557cf1821c",
+            "title": "لابتوب 2",
+            "description": "كمبيوتر محمول أنيق وأنيق للمحترفين.",
+            "category_id": "65d9348eae387c63a42ffc9a"
+          },
+          {
+            "_id": "66047f1cffac53557cf1822d",
+            "title": "ساعة ذكية 3",
+            "description": "ساعة ذكية موجهة للياقة البدنية مع رصد معدل ضربات القلب.",
+            "category_id": "6603e621835b7db92d6e1d39"
+          },
+          {
+            "_id": "66047f1cffac53557cf1822e",
+            "title": "ساعة ذكية 4",
+            "description": "ساعة ذكية متقدمة مع نظام تموضع عالمي ومقاومة للماء.",
+            "category_id": "6603e621835b7db92d6e1d39"
+          },
+          {
+            "_id": "66047f1cffac53557cf18226",
+            "title": "لابتوب 4",
+            "description": "كمبيوتر محمول للألعاب بمواصفات قوية.",
+            "category_id": "65d9348eae387c63a42ffc9a"
+          },
+          {
+            "_id": "66047f1cffac53557cf1822c",
+            "title": "تابلت 4",
+            "description": "تابلت قابل للتحويل مع لوحة مفاتيح قابلة للفصل للإنتاجية.",
+            "category_id": "6603efb64075054035e85718"
+          },
+          {
+            "_id": "66048855dd1ac72e0fb4b116",
+            "title": "لابتوب 1",
+            "description": "كمبيوتر محمول عالي الأداء بميزات متقدمة.",
+            "category_id": "65d9348eae387c63a42ffc9a"
+          },
+          {
+            "_id": "66048855dd1ac72e0fb4b11d",
+            "title": "تابلت 2",
+            "description": "تابلت عالي الأداء بعرض مذهل.",
+            "category_id": "6603efb64075054035e85718"
+          },
+          {
+            "_id": "66048855dd1ac72e0fb4b11e",
+            "title": "ساعة ذكية 1",
+            "description": "ساعة ذكية أنيقة مع ميزات تتبع اللياقة البدنية.",
+            "category_id": "6603e621835b7db92d6e1d39"
+          }
+        ]
+      
+      
 }
