--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,9 +1,55 @@
 {
     "dir":"rtl",
-
-    "users":{
+    "header":{
+        "Shoping":"التسوق",
+        "Home": "الصفحة الرئسية ",
+        "About Us": "عن موقعنا",
+       "Register": "اشتراك",
+        "Login": "تسجيل الدخول",
+       "Products": "المنتجات",
+       "Your Account": "حسابك",
+        "Your Order": "طلباتك",
+        "Logout": "تسجيل الخروج"
 
     },
+    "login":{
+        "Email address":"البريد الإلكترونى ",
+        "Password":"الباسورد",
+        "Submit":"قدم",
+        "email-message":"من فضلك ادخل ايميل صحيح",
+        "pass-message":"من فضلك ادخل باسورد صحيح",
+        "btn-message":"ليس لديك حساب ؟"
+    },
+    "register":{
+        "First Name":"الاسم الاول",
+        "Last Name":"الاسم الاخير",
+        "Email address":"البريد الإلكترونى ",
+        "Password":"الباسورد",
+        "Confirm Password":"تاكيد الباسورد",
+        "Submit":"قدم",
+        "email-message":"من فضلك ادخل ايميل صحيح",
+        "pass-message":"الباسورد ليست صحيحة من فضلك ادخل واحدة صحيحة",
+        "name-message":"من فضلك ادخل اسم صحيح",
+        "passConfirm-message":"الباسورد لا تتطابق",
+        "btn-message":"لديك حساب ؟"
+    },
+"About":
+{ "About Us": "من نحن",
+"About-txt": "مرحبًا بك في متجر SHOPING، وجهتك الشاملة لجميع احتياجاتك من أجهزة الكمبيوتر المحمولة والهواتف المحمولة. في متجر SHOPING، نحن متحمسون لتقديم منتجات تكنولوجيا عالية الجودة لعملائنا، مضمنين أن يظلوا متصلين ومنتجين في عالمنا السريع اليوم.",
+"Our Mission": "رسالتنا",
+"Mission-txt": "رسالتنا في متجر SHOPING بسيطة: توفير أفضل الأجهزة لعملائنا بأسعار تنافسية، مع خدمة عملاء استثنائية. نحن نسعى لتقديم تجربة تسوق عبر الإنترنت سلسة، مما يجعل من السهل عليك العثور على الجهاز المثالي الذي يلبي احتياجاتك.",
+"Our Story": "قصتنا",
+"Story-txt": "تأسس متجر SHOPING برؤية لجعل التكنولوجيا الحديثة متاحة للجميع. ما بدأ كمشروع صغير أصبح وجهة موثوقة على الإنترنت لهواة التكنولوجيا والمستخدمين العاديين على حد سواء. مع سنوات من الخبرة في الصناعة، نستمر في التطور والتكيف لتلبية احتياجات عملائنا المتغيرة باستمرار.",
+"Why Choose Us?": "لماذا تختارنا؟",
+"Choose1": "نقدم مجموعة متنوعة من أجهزة الكمبيوتر المحمولة والهواتف المحمولة من العلامات التجارية الرائدة، مما يضمن لك وجود العديد من الخيارات للاختيار من بينها.",
+"Choose2": "كل منتج نبيعه يخضع لفحوصات جودة دقيقة لضمان أنه يتوافق مع معايير الجودة لدينا، مما يمنحك الراحة بالفكر مع كل عملية شراء.",
+"Choose3": "رضاؤكم هو أولويتنا. فريق دعم العملاء المخصص لدينا هنا لمساعدتك في كل خطوة من الطريق، من اختيار المنتج إلى دعم ما بعد البيع.",
+"Choose4": "نحن نعمل بجد للتفاوض على أفضل الأسعار من موردينا، مما يتيح لنا تقديم توفيرات لعملائنا دون المساس بالجودة."
+,"Choose1-txt": "تشكيلة واسعة",
+"Choose2-txt": "ضمان الجودة",
+"Choose3-txt": "رضا العملاء",
+"Choose4-txt": "تسعير تنافسي"
+},
     "cart":{
         "card-title":"سلة المشريات",
         "card-price":"السعر الكلى :",
@@ -14,130 +60,20 @@
 
     },
     "Contact":{
-        "Contact":"تواصل معنا "
-    },
-        "product": [
-          {
-            "_id": "65da0fd4bc3d4fd87bfbe638",
-            "title": "ابل 2023 ماك بوك برو",
-            "description": "كان الآيفون أول هاتف محمول يستخدم تكنولوجيا اللمس المتعدد.",
-            "category_id": "65d9348eae387c63a42ffc9a"
-          },
-          {
-            "_id": "65f0de96f6d9ac431f3bc4ce",
-            "title": "ابل 2023 ماك بوك برو",
-            "description": "كان الآيفون أول هاتف محمول يستخدم تكنولوجيا اللمس المتعدد.",
-            "category_id": "65d9340bae387c63a42ffc96"
-          },
-          {
-            "_id": "65f0deb3f6d9ac431f3bc4cf",
-            "title": "لابتوب اتش بي",
-            "description": "كان الكمبيوتر المحمول هو أول هاتف محمول يستخدم تكنولوجيا اللمس المتعدد.",
-            "category_id": "65d9340bae387c63a42ffc96"
-          },
-          {
-            "_id": "66034246f5057c627fb39246",
-            "title": "ديل XPS 13",
-            "description": "ديل XPS 13 هو كمبيوتر محمول فاخر بتصميم أنيق وأداء قوي.",
-            "category_id": "65d9348eae387c63a42ffc9a"
-          },
-          {
-            "_id": "66034299f5057c627fb39247",
-            "title": "إتش بي Pavilion",
-            "description": "إتش بي Pavilion هو كمبيوتر محمول متعدد الاستخدامات مناسب للاستخدام اليومي.",
-            "category_id": "65d9348eae387c63a42ffc9a"
-          },
-          {
-            "_id": "66047f1cffac53557cf1821b",
-            "title": "لابتوب 1",
-            "description": "كمبيوتر محمول عالي الأداء بميزات متقدمة.",
-            "category_id": "65d9348eae387c63a42ffc9a"
-          },
-          {
-            "_id": "66047f1cffac53557cf18222",
-            "title": "تابلت 2",
-            "description": "تابلت عالي الأداء بعرض مذهل.",
-            "category_id": "6603efb64075054035e85718"
-          },
-          {
-            "_id": "66047f1cffac53557cf18223",
-            "title": "ساعة ذكية 1",
-            "description": "ساعة ذكية أنيقة مع ميزات تتبع اللياقة البدنية.",
-            "category_id": "6603e621835b7db92d6e1d39"
-          },
-          {
-            "_id": "66047f1cffac53557cf18224",
-            "title": "ساعة ذكية 2",
-            "description": "ساعة ذكية فاخرة بواجهة قابلة للتخصيص.",
-            "category_id": "6603e621835b7db92d6e1d39"
-          },
-          {
-            "_id": "66047f1cffac53557cf18225",
-            "title": "لابتوب 3",
-            "description": "كمبيوتر محمول بأداء معقول بسعر مناسب.",
-            "category_id": "65d9348eae387c63a42ffc9a"
-          },
-          {
-            "_id": "66047f1cffac53557cf18221",
-            "title": "تابلت 1",
-            "description": "تابلت متعدد الاستخدامات للعمل والترفيه.",
-            "category_id": "6603efb64075054035e85718"
-          },
-          {
-            "_id": "66047f1cffac53557cf1822b",
-            "title": "تابلت 3",
-            "description": "تابلت خفيف الوزن مثالي للاستخدام العارض.",
-            "category_id": "6603efb64075054035e85718"
-          },
-          {
-            "_id": "66047f1cffac53557cf1821c",
-            "title": "لابتوب 2",
-            "description": "كمبيوتر محمول أنيق وأنيق للمحترفين.",
-            "category_id": "65d9348eae387c63a42ffc9a"
-          },
-          {
-            "_id": "66047f1cffac53557cf1822d",
-            "title": "ساعة ذكية 3",
-            "description": "ساعة ذكية موجهة للياقة البدنية مع رصد معدل ضربات القلب.",
-            "category_id": "6603e621835b7db92d6e1d39"
-          },
-          {
-            "_id": "66047f1cffac53557cf1822e",
-            "title": "ساعة ذكية 4",
-            "description": "ساعة ذكية متقدمة مع نظام تموضع عالمي ومقاومة للماء.",
-            "category_id": "6603e621835b7db92d6e1d39"
-          },
-          {
-            "_id": "66047f1cffac53557cf18226",
-            "title": "لابتوب 4",
-            "description": "كمبيوتر محمول للألعاب بمواصفات قوية.",
-            "category_id": "65d9348eae387c63a42ffc9a"
-          },
-          {
-            "_id": "66047f1cffac53557cf1822c",
-            "title": "تابلت 4",
-            "description": "تابلت قابل للتحويل مع لوحة مفاتيح قابلة للفصل للإنتاجية.",
-            "category_id": "6603efb64075054035e85718"
-          },
-          {
-            "_id": "66048855dd1ac72e0fb4b116",
-            "title": "لابتوب 1",
-            "description": "كمبيوتر محمول عالي الأداء بميزات متقدمة.",
-            "category_id": "65d9348eae387c63a42ffc9a"
-          },
-          {
-            "_id": "66048855dd1ac72e0fb4b11d",
-            "title": "تابلت 2",
-            "description": "تابلت عالي الأداء بعرض مذهل.",
-            "category_id": "6603efb64075054035e85718"
-          },
-          {
-            "_id": "66048855dd1ac72e0fb4b11e",
-            "title": "ساعة ذكية 1",
-            "description": "ساعة ذكية أنيقة مع ميزات تتبع اللياقة البدنية.",
-            "category_id": "6603e621835b7db92d6e1d39"
-          }
-        ]
+        "Contact":"تواصل معنا",
+        "email":"الايميل",
+        "name":"الاسم",
+        "message":"رسالتك",
+        "submit":"قدم "
+    },"category":{
+        "price":"السعر من الاقل الى الاكبر",
+        "price-desc":"السعر من الاكبر الى الاقل",
+        "category":"الفئة من ا الى ى",
+        "sort":"الترتيب بواسطة ",
+        "Search":"بحث",
+        "Products":"المنتجات" ,
+        "All Categories":"كل الفئات" 
+    }
       
       
 }
