translate customer review

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -73,6 +73,14 @@
         "Search":"بحث",
         "Products":"المنتجات" ,
         "All Categories":"كل الفئات" 
+    },
+    "review":{
+        "review1-msg":"هذا المنتج مذهل! أنا أحبه.",
+        "review1":"-  اسماعيل محمد",
+        "review-title":"تقييمات العملاء",
+        "review2-msg":"هذا المنتج مذهل! أنا أحبه.",
+        "review2":"وفاء محمد",
+        "category-title":"تسوق الفئات الشهيرة"
     }
       
       
